kubernetes/jenkins.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 32080
    port: 8080
    targetPort: 8080
    name: jenkins-dashboard
  selector:
    app: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  namespace: jenkins
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: agent-listener
  selector:
    app: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      securityContext:
        fsGroup: 1000
        runAsUser: 0      
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - name: jenkins-home
          mountPath: /var/jenkins_home         
        resources:
          limits:
            cpu: 800m
            memory: 3Gi
          requests:
            cpu: 100m
            memory: 3Gi           
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: jenkins
