kubernetes/movies-api-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: movies-api-svc
  namespace: movies
  labels:
    name: movies-api-svc
    app: movies-api-svc
spec:
  type: NodePort
  ports:
  - name: http
    port: 8090
    targetPort: 8090
    nodePort: 30070
  selector:
    app: movies-api-pod



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-api-deploy
  namespace: movies
  labels:
    app: movies-api-deploy
spec:
  replicas: 1
  selector:
    matchLabels:  
      app: movies-api-pod
  template:
    metadata:
      labels:
        app: movies-api-pod
    spec:
      containers:
      - name: movies-api
        image: docker-public.kube.cloudapps.ms3-inc.com/movies-api:latest
        ports:
        - containerPort: 8090
