kubernetes/mysql-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: movies
  labels:
    name: mysql-service
    app: mysql
spec:
  clusterIP: None
  ports:
    - port: 3306
  selector:
    name: mysql-pod
    app: mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: movies
  labels:
    name: mysql-deploy
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mysql-pod
      app: mysql
  template:
    metadata:
      name: mysql-pod
      labels:
        name: mysql-pod
        app: mysql
    spec:
      containers:
        - name: movie-db
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
