kubernetes/movies-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-api-ingress
  namespace: movies
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: movies.com
      http:
        paths:
          - path: /api[/|$](.*)
            pathType: Prefix
            backend:
              service:
                name: movies-api-svc
                port:
                  number: 8090
          - path: /(auth(/|$).*)
            pathType: Prefix
            backend:
              service:
                name: keycloak-svc
                port:
                  number: 8080
